--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "side-channel": "^1.0.4",
     "statuses": "^2.0.1",
     "toidentifier": "^1.0.1",
+    "tronweb": "^5.1.0",
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
